--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="py-5">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/animalpage/" title="top" style="text-decoration: none;"><h1 class="title"><img src="{% static 'images/animals.png' %}" class="logo" width="36px" height="36px"/><i class="bi bi-house-heart"></i>台灣流浪動物</h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,7 +42,7 @@
             </div>
         </nav>
         <div class="text-center py-5"> 
-        <a href="/animalpage/" title="top" style="text-decoration: none;"><h1 class="title"><img src="{% static 'images/animals.png' %}" class="logo" width="36px" height="36px"/><i class="bi bi-house-heart"></i>台灣流浪動物</h1></a>
+        <!-- <a href="/animalpage/" title="top" style="text-decoration: none;"><h1 class="title"><img src="{% static 'images/animals.png' %}" class="logo" width="36px" height="36px"/><i class="bi bi-house-heart"></i>台灣流浪動物</h1></a> -->
         </div>
     </header>
     <br>
