--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>流浪動物收養</title>
-    {% load static %}
-    <link href="{% static 'favicon/favicon.ico' %}" rel="shortcut icon" type='image/x-icon' width='16px' height='16px'/>
-    
+    <title>流浪動物收養</title>    
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon' width='16px' height='16px'/>
     <link href="{% static 'css/styleoneshow.css' %}" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
