--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="台灣流浪動物">
+    <meta name="keyword" content="Taiwan,Weather,Report,台灣,流浪,動物,狗,貓">
+    <meta name="application-name" content="台灣流浪動物">
     <title>流浪動物收養</title>    
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type='image/x-icon' width='16px' height='16px'/>
+    <link rel="shortcut icon" href="{% static 'images/shiba.png' %}" type='image/x-icon' width='16px' height='16px'/>
     <link href="{% static 'css/styleoneshow.css' %}" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
