--- a/templates/animals.html
+++ b/templates/animals.html
@@ -32,7 +32,7 @@
                 <td>{{i.animal_sex}}</td>
                 <td>{{i.animal_bodytype}}</td>
                 <td>{{i.animal_age}}</td>
-                <td><a href="/animal/{{i.animal_id}}"><img src="{{i.album_file}}" width="100" height="100" class="rounded-3 infomation" style="object-fit:cover;"></a></td>
+                <td><a class="imformation" href="/animal/{{i.animal_id}}"><img src="{{i.album_file}}" width="100" height="100" class="rounded-3 infomation" style="object-fit:cover;"></a></td>
                 <td>{{i.animal_update}}</td>
                 <!--<td>{{i.shelter_name}}</td>-->
                 <td>{{i.shelter_address}}</td>
