--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,35 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="台灣流浪動物">
-    <meta name="keyword" content="Taiwan,Weather,Report,台灣,流浪,動物,狗,貓">
+    <meta name="keyword" content="Taiwan,Weather,Report,台灣,流浪,動物,狗,貓,臺灣">
     <meta name="application-name" content="台灣流浪動物">
-    <title>流浪動物收養</title>    
-    <link rel="shortcut icon" href="{% static 'images/shiba.png' %}" type='image/x-icon' width='16px' height='16px'/>
-    <link href="{% static 'css/styleoneshow.css' %}" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="{% static 'images/shiba.png' %}" type='image/x-icon' width='16px' height='16px' />
+    <link href="https://fonts.googleapis.com/css2?family=Aoboshi+One&family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link href="{% static 'css/styleoneshow.css' %}" rel="stylesheet" type="text/css" />
+    {% block extrahead %}
+    <title>台灣流浪動物</title>
+    {% endblock %}
 </head>
+
 <body>
     <header class="py-5">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark-subtle">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/animalpage/" title="top" style="text-decoration: none;"><h1 class="title"><img src="{% static 'images/animals.png' %}" class="logo" width="36px" height="36px"/><i class="bi bi-house-heart"></i>台灣流浪動物</h1></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" href="/animalpage/" title="top" style="text-decoration: none;">
+                    <h1 class="logo"><img src="{% static 'images/animals.png' %}" class="logo"/>台灣流浪動物</h1>
+                </a>
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" -->
+                    <!-- data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" -->
+                    <!-- aria-expanded="false" aria-label="Toggle navigation"> -->
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                <!-- </button> -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
                         <li class="nav-item">
@@ -31,21 +38,21 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/animalpage/">animals</a>
                         </li>-->
-                        <!-- {% comment %} <li class="nav-item"> -->
-                            <!-- <a class="nav-link" href="csv-data/">CSV Data</a> -->
-                        <!-- </li> {% endcomment %} -->
+                    <!-- {% comment %} <li class="nav-item"> -->
+                    <!-- <a class="nav-link" href="csv-data/">CSV Data</a> -->
+                    <!-- </li> {% endcomment %} -->
                     <!-- </ul> -->
-                    <form method="post" class="d-flex" action="" accept-charset="UTF-8" action="" >
-                        {% csrf_token %}
-                        <input class="form-control me-2" type="text" placeholder="狗、貓、其他" name="animal_kind" id="animal_kind">
-                        <button class="btn btn-outline-success" type="submit" >Search</button>
-                    </form>
+                    <!-- <form method="post" class="d-flex" action="" accept-charset="UTF-8" action="" > -->
+                    <!-- {% csrf_token %} -->
+                    <!-- <input class="form-control me-2" type="text" placeholder="狗、貓、其他" name="animal_kind" id="animal_kind"> -->
+                    <!-- <button class="btn btn-outline-success" type="submit" >Search</button> -->
+                    <!-- </form> -->
                 </div>
             </div>
         </nav>
-        <div class="text-center py-5"> 
+        <!-- <div class="text-center py-5">  -->
         <!-- <a href="/animalpage/" title="top" style="text-decoration: none;"><h1 class="title"><img src="{% static 'images/animals.png' %}" class="logo" width="36px" height="36px"/><i class="bi bi-house-heart"></i>台灣流浪動物</h1></a> -->
-        </div>
+        <!-- </div> -->
     </header>
     <br>
     {% block content %}
@@ -54,9 +61,13 @@
     <div class="text-center bg-dark-subtle p-5">
         <footer>Copyrights &copy; 2023 All Rights Reserverd By IAN 台灣流浪動物</footer>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
