--- a/static/css/styleoneshow.css
+++ b/static/css/styleoneshow.css
@@ -72,7 +72,7 @@
     .title-shelter_name{width: 270px;}
     div .title-shelter_address{display: none;}
     .title-shelter_tel{width: 175px;}
-
+    .sex{width: 70px;}
     .information {width:220px;height: 220px;}
     .img {width: 210px;height: 210px;}
     .update{width: 160px;line-height:normal;}
